# mh

./: LICENSE  README.md
examples/meshviewer/: CMakeLists.txt
examples/meshviewer/include/gui/: meshviewer.h
examples/meshviewer/src/: main.cpp
examples/meshviewer/src/gui/: meshviewer.cpp
lib/: .gitignore  CMakeLists.txt  MHConfig.cmake.in  MHConfigVersion.cmake.in  update_imgui.sh
lib/include/3d/: camera.h  face.h  halfedge.h  mesh.h  scene.h  util.h  vertex.h
lib/include/3d/impl/: util.hpp
lib/include/base/: defs.h  imports.h
lib/include/gpu/: shader.h
lib/include/gui/: dialogs.h  sceneviewer.h  viewer.h
lib/include/gui/widgets/: widget.h
lib/include/io/: meshio.h
lib/include/mh/3d/: bvh.h  camera.h  camerabase.h  face.h  genericcamera.h  halfedge.h  intersection.h  material.h  mesh.h  mesh_old.h  meshglstate.h  pointcloudglstate.h  ray.h  scene.h  transform.h  util.h  vertex.h  wedge.h
lib/include/mh/3d/impl/: util.hpp
lib/include/mh/base/: datatypes.h  defs.h  imports.h  util.h
lib/include/mh/ext/: tritri.h
lib/include/mh/ext/gl3w/: gl3w.h
lib/include/mh/ext/imgui/: imgui.h  imgui_internal.h
lib/include/mh/ext/tinyobjloader/: tiny_obj_loader.h
lib/include/mh/gpu/: gpu_util.h  shader.h  texture.h  texture_manager.h
lib/include/mh/gui/: dialogs.h  mouse_callback.h  sceneviewer.h  viewer.h
lib/include/mh/gui/widgets/: widget.h
lib/include/mh/io/: io.h  meshio.h
lib/include/mh/util/: background.h  bvh.h  kd_tree.h  octree.h
lib/include/mh/util/impl/: kd_tree.hpp
lib/src/3d/: bvh.cpp  camera.cpp  face.cpp  mesh.cpp  mesh_old.cpp  meshglstate.cpp  pointcloudglstate.cpp  scene.cpp  transform.cpp  util.cpp
lib/src/ext/gl3w/: gl3w.c
lib/src/ext/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw_gl3.cpp
lib/src/ext/nfd/: nfd_common.h  nfd_gtk.c
lib/src/ext/soil/: SOIL.c  image_DXT.c  image_helper.c  stb_image_aug.c  stb_image_write.c
lib/src/ext/tinyobjloader/: tiny_obj_loader.cc
lib/src/gpu/: shader.cpp  texture.cpp
lib/src/gui/: viewer.cpp
lib/src/gui/widgets/: widget.cpp
lib/src/io/: io.cpp  meshio.cpp
lib/src/util/: background.cpp  bvh.cpp
