CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME meshviewer)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   -Wall -DDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")

SET(CMAKE_BUILD_TYPE "Debug")

### INCLUDES
INCLUDE_DIRECTORIES(include)

### MH LIBRARY
FIND_PACKAGE(MH CONFIG)
INCLUDE_DIRECTORIES(${MH_INCLUDE_DIRS})
MESSAGE(STATUS ${MH_INCLUDE_DIRS})

### PROJ ###

### SRC FILES
FILE(GLOB_RECURSE PROJ_SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)

### EXECUTABLE
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJ_SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MH_LIBRARIES})
